--- a/Private Area/Dettagli/2/style.css
+++ b/Private Area/Dettagli/2/style.css
@@ -1,10 +1,7 @@
 html, body {
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: 'Raleway', sans-serif;
   background-color: #F9F9F9;
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
 }
 
 main {
@@ -169,7 +166,7 @@ p {
   display: grid;
   grid-template-rows: repeat(auto, 100px);
   column-gap: 35px;
-  padding: 44px 35px;
+  padding: 44px 30px;
   background-color: #F9F9F9;
 }
 
@@ -232,29 +229,30 @@ p {
   column-gap: 75px;
 }
 
-#page-container .table-container .table-parte-istante {
+#page-container .table-container .table-big {
   width: 100%;
 }
 
-#page-container .table-container .table-parte-istante .rows {
+#page-container .table-container .table-big .rows {
   margin-bottom: 70px;
   gap: 30px;
 }
 
-#page-container .table-container .table-parte-istante .rows .rows-container {
+#page-container .table-container .table-big .rows .rows-container {
   width: 100%;
 }
 
-#page-container .table-container .table-parte-istante .rows .columns-container {
-  width: max-content;
+#page-container .table-container .table-big .rows .columns-container {
+  flex-wrap: wrap;
   column-gap: 30px;
+  row-gap: 70px;
 }
 
-#page-container .table-container .table-parte-istante .column-title {
+#page-container .table-container .table-big .column-title {
   min-width: 88px;
 }
 
-#page-container .table-container .table-parte-istante .column {
+#page-container .table-container .table-big .column {
   width: 190px;
 }
 
@@ -286,11 +284,11 @@ p {
     width: calc(100% - 15px);
   }
 
-  #page-container .table-container .table-parte-istante .rows {
+  #page-container .table-container .table-big .rows {
     flex-direction: column;
   }
 
-  #page-container .table-container .table-parte-istante .column-title {
+  #page-container .table-container .table-big .column-title {
     width: 100%;
   }
 } 
@@ -341,6 +339,7 @@ p {
     height: 100vh;
     width: 100vw;
     background-color: #088155;
+    z-index: 100;
   }
 
   #page-container .small-menu .profile p {
@@ -470,6 +469,11 @@ p {
   
   #page-container .table-container .table .title {
     border-radius: 0;
+  }
+
+  #page-container .table-container .table-big .rows .columns-container {
+    flex-wrap: nowrap;
+    width: fit-content;
   }
 
   #page-container .table-container .table-contati .content {
