--- a/Private Area/Dettagli/3/style.css
+++ b/Private Area/Dettagli/3/style.css
@@ -2,7 +2,6 @@ html, body {
   overflow-x: hidden;
   font-family: 'Raleway', sans-serif;
   background-color: #F9F9F9;
-
 }
 
 p {
@@ -167,7 +166,7 @@ main {
   display: grid;
   grid-template-rows: repeat(auto, 100px);
   column-gap: 35px;
-  padding: 44px 40px;
+  padding: 44px 35px;
   background-color: #F9F9F9;
 }
 
@@ -219,32 +218,67 @@ main {
   column-gap: 75px;
 }
 
-#page-container .table-container .table-parte-istante {
+#page-container .table-container .table-big {
   width: 100%;
 }
 
-#page-container .table-container .table-parte-istante .rows {
+#page-container .table-container .table-big .rows {
   margin-bottom: 70px;
   gap: 35px;
 }
 
-#page-container .table-container .table-parte-istante .rows .rows-container {
+#page-container .table-container .table-big .rows .rows-container {
   width: 100%;
 }
 
-#page-container .table-container .table-parte-istante .rows .columns-container {
-  gap: 35px;
-  width: fit-content;
+#page-container .table-container .table-big .rows .columns-container {
+  flex-wrap: wrap;
+  column-gap: 30px;
+  row-gap: 70px;
 }
 
-#page-container .table-container .table-parte-istante .column-title {
+#page-container .table-container .table-big .column-title {
   min-width: 88px;
+  max-width: 88px;
 }
 
-#page-container .table-container .table-parte-istante .column {
+#page-container .table-container .table-big .column {
   width: 190px;
 }
 
+#page-container .table-container .table-parte-invitata {
+  background-color: #fafafa;
+}
+
+#page-container .table-container .table-parte-invitata .confirmed .content {
+  padding: 30px;
+  min-height: 428px;
+  background: rgba(8, 129, 85, 0.1);
+  border-radius: 5px;
+}
+
+#page-container .table-container .table-parte-invitata .confirmed .content .confirmed-title {
+  margin-bottom: 38px;
+  font-size: 16px;
+  font-weight: 800;
+  color: #088155;
+  text-transform: uppercase;
+}
+
+#page-container .table-container .table-parte-invitata .not-confirmed .content {
+  padding: 30px;
+  min-height: 428px;
+  background: #F1F1F1;
+  border-radius: 5px;
+}
+
+#page-container .table-container .table-parte-invitata .not-confirmed .content .not-confirmed-title {
+  margin-bottom: 38px;
+  font-size: 16px;
+  font-weight: 800;
+  color: #BE2F02;
+  text-transform: uppercase;
+}
 
 
 /*media queries-----------------------------*/
@@ -273,11 +307,11 @@ main {
     width: calc(100% - 15px);
   }
 
-  #page-container .table-container .table-parte-istante .rows {
+  #page-container .table-container .table-big .rows {
     flex-direction: column;
   }
 
-  #page-container .table-container .table-parte-istante .column-title {
+  #page-container .table-container .table-big .column-title {
     width: 100%;
   }
 } 
@@ -328,6 +362,7 @@ main {
     height: 100vh;
     width: 100vw;
     background-color: #088155;
+    z-index: 100;
   }
 
   #page-container .small-menu .profile p {
@@ -457,6 +492,11 @@ main {
   
   #page-container .table-container .table .title {
     border-radius: 0;
+  }
+
+  #page-container .table-container .table-big .rows .columns-container {
+    flex-wrap: nowrap;
+    width: min-content;
   }
 
   #page-container .table-container .table-contati .content {
